fixing a couple bugs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </svg>
         </button>
 
-        <button class="toolbar__mobile_menu_button" x-show="open" @click="open = true">
+        <button class="toolbar__mobile_menu_button" x-show="open" @click="open = false">
           <svg class="toolbar__menu_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
           </svg>
@@ -37,7 +37,7 @@
         <nav>
           <ul>
             <li>
-              <a class="mobile_menu__nav_item nav_item_active" href="#dashboard">Dashboard</a>
+              <a class="mobile_menu__nav_item mobile_menu__nav_item_active" href="#dashboard">Dashboard</a>
             </li>
             <li>
               <a class="mobile_menu__nav_item" href="#analytics">Analytics</a>
